Closed Bug 56442 Opened 24 years ago Closed 24 years ago

Incorrect builtin loadable root cert module nssckbi32.dll on Windows

Categories

(NSS :: Libraries, defect, P1)

x86
Windows 2000

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(2 files)

The builtin loadable root cert module nssckbi32.dll
has several serious problems on Windows.
1. lib/pk11wrap looks for the name "nssckbi.dll",
   not "nssckbi32.dll".
2. nssckbi32.dll's entry point C_GetFunctionList is
   not DLL exported, so lib/pk11wrap cannot find that
   symbol in the DLL.
3. The definition of struct CK_FUNCTION_LIST in
   nssckepv.h doesn't have the pack pragma, so it
   does not conform to the packing requirement of
   pkcs11.h.

I will attach a patch that makes it work on Windows,
but the patch is just a proof of concept.  It needs
more work before it can be checked in.
Attached patch Proposed patch.Splinter Review
The proposed patch has been checked in on the
NSS_3_1_BRANCH and the tip.
Severity: normal → major
Status: NEW → RESOLVED
Closed: 24 years ago
Priority: P3 → P1
Resolution: --- → FIXED
Target Milestone: --- → 3.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: